# mcp_server

./: Makefile  README.md  mcp-config.json  pyproject.toml
src/mcp_server/: main.py
src/mcp_server/agents/: crypto_analyst.py
